--- a/style.css
+++ b/style.css
@@ -107,6 +107,11 @@ main .container {
 @keyframes appear {
     0% {
         opacity: 0;
+        transform: scale(0.6);
+    }
+
+    50% {
+        transform: scale(1.1);
     }
 
     100% {
