--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     display: grid;
     grid-template-rows: max-content 1fr max-content;
 
-    height: 100%;
+    height: 100vh;
 }
 h1 {
     width: min(1216px, 100%); 
@@ -79,8 +79,8 @@ input::placeholder {
 main {
     background: #F5F5F5;
     padding-bottom: 6.42rem;
-    /* overflow: auto;
-    scrollbar-gutter: stable both-edges; */
+    overflow-y: scroll;
+    scrollbar-gutter: stable both-edges;
 }
 .container {
     display: grid;
